--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,5 +6,7 @@ head
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
 body
+  - flash.each do |name, msg|
+    = content_tag :div, msg, class: 'alert alert-info'
   = yield
 
