--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -15,6 +15,7 @@
   <tbody>
     <% @movies.each do |movie| %>
       <tr>
+        <td><%= image_tag movie.image_url(:medium) %></td>
         <td><%= movie.title %></td>
         <td><%= movie.description %></td>
         <td><%= movie.movie_length %></td>
