--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,9 @@ head
   = javascript_include_tag 'application', 'data-turbolinks-track' => true
   = csrf_meta_tags
 body
-  - flash.each do |name, msg|
-    = content_tag :div, msg, class: 'alert alert-info'
-  = yield
+  = render 'layouts/header'
+  .container
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: 'alert alert-info'
+    = yield
 
