--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,7 +25,7 @@ body {
   margin: 0 0 20px 0;
 }
 
-.review {
+.reviews {
   padding: 15px 0;
   border-bottom: 1px solid #EAEAEA;
   .star-rating {
