--- a/app/views/movies/show.html.slim
+++ b/app/views/movies/show.html.slim
@@ -3,6 +3,8 @@
     .row
       .col-md-4
         = image_tag @movie.image_url(:medium)
+        div.star-rating data-score= @avg_rating
+        em #{@reviews.length} reviews
         .table-responsive
           table.table
             tbody
@@ -32,8 +34,32 @@
                 td
                   strong Rating:
                 td= @movie.rating  
+          = link_to 'Add New Review', new_movie_review_path(@movie)
+      .col-md-7.col-md-offset-1
+        h1.review_title= @movie.title
+        p= @movie.description
+        - if @reviews.blank?
+          h3 No review Just yet, would you like to add the first!
+          = link_to 'Add New Review', new_movie_review_path(@movie), class: 'btn btn-danger'
+        - else
+          - @reviews.each do |review|
+            .reviews
+              div.star-rating data-score=review.rating
+              / p= review.rating
+              p= review.comment
+
 
 
 = link_to 'Edit', edit_movie_path(@movie)
 |  | 
-= link_to 'Back', movies_path 
+= link_to 'Back', movies_path
+
+javascript:
+  $('.star-rating').raty({
+    path: '/assets/',
+    readOnly : true,
+    score : function () {
+      return $(this).attr('data-score');
+    }
+
+  }); 
