--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -21,12 +21,10 @@
           li= link_to 'Sign Up', new_user_registration_path, class: 'active'
           li= link_to 'Sign In', new_user_session_path, class: 'active'
       </ul>
-      <form class="navbar-form navbar-right" role="search">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      = form_tag search_movies_path, method: :get, class: 'navbar-form navbar-right', role: 'search' do
+        p
+          = text_field_tag :search, params[:search], class: 'form-control'
+          = submit_tag 'Search', name: nil, class: 'btn btn-default'
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
